<resources>
    <string name="app_name">Project 2</string>
    <string name="welcome_log_in">Welcome!\nPlease log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="preference_file_key">UBDPreferenceFileNameGame</string>
    <string name="preference_userId_key">UBDPreferenceUserIdKeyGame</string>
    <string name="logged_in">LOGGED IN</string>
    <string name="welcome_nthis_is_the_landing_page">Welcome!\nThis is the landing page</string>
    <string name="name">Name</string>
    <string name="dex">Dex</string>
    <string name="favorites">Favorites</string>
    <string name="tierlist">Tier List</string>
    <string name="enter_pok_mon_name">Enter Pokémon name</string>
    <string name="submit">Submit</string>
    <string name="home">home</string>
    <string name="show_legendary_mons">Show Legendary Mons</string>
    <string name="show_pseudo_legendary_mons">Show Pseudo Legendary Mons</string>
    <string name="show_starter_mons">Show Starter Mons</string>
    <string name="choose_a_set_of_monsters_to_display">Choose a set of monsters to display</string>

    <string name="create_an_account">Create an Account</string>
    <string name="images">Images</string>
    <string name="register">Register</string>
    <string name="add_to_s_tier">Add to S tier</string>
    <string name="add_to_a_tier">Add to A Tier</string>
    <string name="add_to_b_tier">Add to B Tier</string>
    <string name="add_to_d_tier">add to d tier</string>
    <string name="add_to_f_tier">add to f tier</string>
    <string name="add_to_c_tier">Add to C Tier</string>
</resources>