<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/wall">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:id="@+id/titleLoginTextView"
        android:textSize="42sp"
        android:fontFamily="@font/carterone_regular"
        android:text="@string/welcome_log_in"
        android:gravity="center"
        android:layout_margin="16dip"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#FFCC00"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/username"
        android:textColorHint="#000000"
        app:layout_constraintTop_toBottomOf="@id/titleLoginTextView"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/userNameLogInEditText"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:fontFamily="@font/carterone_regular"
        android:textSize="24sp"
        android:inputType="text"
        android:drawableLeft="@drawable/baseline_catching_pokemon_24"
        android:drawableTint="#680000"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/userNameLogInEditText"
        android:layout_margin="16dp"
        android:fontFamily="@font/carterone_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/passwordLogInEditText"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:textColorHint="@color/black"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_catching_pokemon_24"
        android:drawableTint="#680000"
        />

    <Button
        android:layout_width="350dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLogInEditText"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textSize="28sp"
        android:layout_margin="16dp"
        android:fontFamily="@font/carterone_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#14F4F1"
        />

    <Button
        android:layout_width="350dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        android:id="@+id/goToSignupButton"
        android:fontFamily="@font/carterone_regular"
        android:text="@string/create_an_account"
        android:textSize="28sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#14F4F1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>