<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="@drawable/nice"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="170dip"
        android:id="@+id/titleSignupView"
        android:textSize="42sp"
        android:text="@string/create_account"
        android:gravity="center"
        android:layout_margin="16dip"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@id/titleSignupView"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/userNameSignupEditText"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:inputType="text"
        android:drawableLeft="@drawable/baseline_catching_pokemon_24"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/userNameSignupEditText"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/passwordSignupEditText"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:inputType="textPassword"

        android:drawableLeft="@drawable/baseline_catching_pokemon_24"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/passwordSignupEditText"
        android:id="@+id/loginButton"
        android:text="@string/register"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#A10CE9D7"
        />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:src="@drawable/pika"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="522dp"

        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>