<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/sign">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="170dip"
        android:id="@+id/titleSignupView"
        android:fontFamily="@font/carterone_regular"
        android:textSize="42sp"
        android:text="Create an Account"
        android:gravity="center"
        android:layout_margin="16dip"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/username"
        android:drawableTint="#037273"
        app:layout_constraintTop_toBottomOf="@id/titleSignupView"
        android:layout_margin="16dp"
        android:drawableLeft="@drawable/baseline_catching_pokemon_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/userNameSignupEditText"
        android:autofillHints="Please enter username"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/baseline_catching_pokemon_24"
        android:drawableTint="#037273"
        app:layout_constraintTop_toBottomOf="@id/userNameSignupEditText"
        android:layout_margin="16dp"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/passwordSignupEditText"
        android:autofillHints="Please enter password"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:inputType="textPassword"

        />

    <Button
        android:layout_width="300dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/passwordSignupEditText"
        android:id="@+id/registerButton"
        android:fontFamily="@font/carterone_regular"
        android:text="@string/register"
        android:textSize="25sp"
        android:layout_margin="16dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#3798AF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/registerButton"
        android:id="@+id/backToLoginButton"
        android:fontFamily="@font/carterone_regular"
        android:text="Go to Login"
        android:textSize="25sp"
        android:layout_margin="16dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#3798AF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>